[gd_scene load_steps=13 format=3 uid="uid://pup5he7e7uei"]

[ext_resource type="Script" path="res://scenes/custom_windows/cards_window.gd" id="1_l7gm7"]
[ext_resource type="Texture2D" uid="uid://be4yxkbasnp6w" path="res://assets/icons/arrow-double-right.png" id="2_7yp6m"]
[ext_resource type="Material" uid="uid://cbc67egooc2qr" path="res://scenes/custom_windows/tune_icon_color.tres" id="2_ku3xw"]
[ext_resource type="Texture2D" uid="uid://d0p08tk3aoghu" path="res://assets/icons/close-bold.png" id="3_0ar6w"]
[ext_resource type="Texture2D" uid="uid://bfjs6kmlrjwxf" path="res://assets/icons/arrow-right.png" id="3_b6lmt"]
[ext_resource type="Script" path="res://scenes/custom_windows/handles.gd" id="6_77nvp"]
[ext_resource type="PackedScene" uid="uid://cvgg41oimyeus" path="res://scenes/components/draggable_component.tscn" id="7_eptfp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1dx5"]
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_emeg0"]
bg_color = Color(0.160784, 0.172549, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5xsa"]
bg_color = Color(0.160784, 0.172549, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w0nig"]
content_margin_left = 4.0
bg_color = Color(0.160784, 0.172549, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28k5m"]
bg_color = Color(0.160784, 0.172549, 0.2, 1)
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="CardsWindow" type="Control"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 3
anchors_preset = 0
offset_right = 1010.0
offset_bottom = 710.0
mouse_filter = 2
script = ExtResource("1_l7gm7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopBar" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h1dx5")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TopBar"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopBar/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 4

[node name="FirstPage" type="TextureButton" parent="VBoxContainer/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_7yp6m")
flip_h = true

[node name="PrevPage" type="TextureButton" parent="VBoxContainer/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_b6lmt")
flip_h = true

[node name="PageNumber" type="LineEdit" parent="VBoxContainer/TopBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/caret_color = Color(0, 0, 0, 0)
theme_override_styles/normal = SubResource("StyleBoxFlat_emeg0")
theme_override_styles/focus = SubResource("StyleBoxFlat_x5xsa")
text = "1"
alignment = 1
context_menu_enabled = false
select_all_on_focus = true

[node name="NextPage" type="TextureButton" parent="VBoxContainer/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_b6lmt")

[node name="LastPage" type="TextureButton" parent="VBoxContainer/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_7yp6m")

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TopBar/MarginContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TagFilter" type="LineEdit" parent="VBoxContainer/TopBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 28)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_w0nig")
placeholder_text = "search with tags..."
middle_mouse_paste_enabled = false

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/TopBar/MarginContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="TextureButton" parent="VBoxContainer/TopBar/MarginContainer/HBoxContainer"]
material = ExtResource("2_ku3xw")
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("3_0ar6w")
ignore_texture_size = true
stretch_mode = 5

[node name="Content" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_28k5m")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Content/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="HFlowContainer" parent="VBoxContainer/Content/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
alignment = 1

[node name="Handles" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6_77nvp")

[node name="Bottom" type="Control" parent="Handles"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 9

[node name="Right" type="Control" parent="Handles"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 10

[node name="Corner" type="Control" parent="Handles"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 12

[node name="DraggableComponent" parent="." instance=ExtResource("7_eptfp")]

[connection signal="pressed" from="VBoxContainer/TopBar/MarginContainer/HBoxContainer/FirstPage" to="." method="_on_first_page_pressed"]
[connection signal="pressed" from="VBoxContainer/TopBar/MarginContainer/HBoxContainer/PrevPage" to="." method="_on_prev_page_pressed"]
[connection signal="text_submitted" from="VBoxContainer/TopBar/MarginContainer/HBoxContainer/PageNumber" to="." method="_on_page_number_text_submitted"]
[connection signal="pressed" from="VBoxContainer/TopBar/MarginContainer/HBoxContainer/NextPage" to="." method="_on_next_page_pressed"]
[connection signal="pressed" from="VBoxContainer/TopBar/MarginContainer/HBoxContainer/LastPage" to="." method="_on_last_page_pressed"]
[connection signal="text_submitted" from="VBoxContainer/TopBar/MarginContainer/HBoxContainer/TagFilter" to="." method="_on_tag_filter_text_submitted"]
[connection signal="pressed" from="VBoxContainer/TopBar/MarginContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="gui_input" from="Handles/Bottom" to="Handles" method="_on_bottom_gui_input"]
[connection signal="gui_input" from="Handles/Right" to="Handles" method="_on_right_gui_input"]
[connection signal="gui_input" from="Handles/Corner" to="Handles" method="_on_corner_gui_input"]
